--- a/metadata.yaml
+++ b/metadata.yaml
@@ -31,5 +31,6 @@ subjects:
 - !lcsh 'Byron, George Gordon Byron, Baron, 1788-1824'
 - !lcc 'PR'
 - !lcsh 'Poets, English -- 19th century -- Biography'
+- GITenberg
 title: "Life of Lord Byron, Vol. 3\r\nWith His Letters and Journals"
 url: http://www.gutenberg.org/ebooks/16548
